Bug 427460 - mirror keyframes crashes krita
Summary: mirror keyframes crashes krita
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Eoin O'Neill
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-08 19:29 UTC by Arno
Modified: 2020-10-12 20:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Arno 2020-10-08 19:29:47 UTC
SUMMARY


STEPS TO REPRODUCE
1. selecting keyframes in timeline
2. rightmouse click, select mirror frames
3. krita crashes

OBSERVED RESULT
krita crashes

EXPECTED RESULT
frames are being mirrored

SOFTWARE/OS VERSIONS
Krita

 Version: 5.0.0-prealpha
 Languages: en_US, en, en_US, en
 Hidpi: false

Qt

  Version (compiled): 5.9.5
  Version (loaded): 5.9.5

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 5.4.0-48-generic
  Pretty Productname: elementary OS 5.1.7 Hera
  Product Type: elementary
  Product Version: 5.1.7
  Desktop: Pantheon

OpenGL Info
 
  Vendor:  "NVIDIA Corporation" 
  Renderer:  "Quadro M620/PCIe/SSE2" 
  Version:  "4.6.0 NVIDIA 450.66" 
  Shading language:  "4.60 NVIDIA" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 0, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::SwapBehavior(DoubleBuffer), swapInterval 0, profile  QSurfaceFormat::OpenGLContextProfile(CompatibilityProfile)) 
  Current format:    QSurfaceFormat(version 4.6, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 0, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::SwapBehavior(DoubleBuffer), swapInterval 0, profile  QSurfaceFormat::OpenGLContextProfile(CompatibilityProfile)) 
     Version: 4.6
     Supports deprecated functions true 
     is OpenGL ES: false 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsOpenGLES: true 
  isQtPreferOpenGLES: false 

Hardware Information

  GPU Acceleration: auto
  Memory: 15932 Mb
  Number of Cores: 8
  Swap Location: /tmp

Current Settings

  Current Swap Location: /tmp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 30
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Use AMD Vectorization Workaround: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 900
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: false
  Use Zip64: false


Display Information
Number of screens: 1
	Screen: 0
		Name: DP-3
		Depth: 24
		Scale: 1
		Resolution in pixels: 3840x2160
		Manufacturer: 
		Model: 
		Refresh Rate: 59


ADDITIONAL INFORMATION
Comment 1 Eoin O'Neill 2020-10-12 20:10:50 UTC
Sorry, forgot to mark this confirmed. This is an issue with the refactor I missed, thanks for pointing this out. If you have any other issues like this on master, let me know. A fix should be out on nightly builds soon.
Comment 2 Eoin O'Neill 2020-10-12 20:15:13 UTC
Git commit 5d38a384a1a7ccecfaedc855f317f7766d72ce79 by Eoin O'Neill.
Committed on 12/10/2020 at 20:19.
Pushed by eoinoneill into branch 'master'.

Fixed Assert on Mirror Frames Action

(Krita 5.0 Animation Refactor)

Some of the client side code needed to be rewritten to account
for selected "frame" indices that do not contain frames. This
was missed because contiguous frame placement would not cause
this assert to fire.

M  +24   -1    plugins/dockers/animation/kis_time_based_item_model.cpp

https://invent.kde.org/graphics/krita/commit/5d38a384a1a7ccecfaedc855f317f7766d72ce79