Fixed Assert on Mirror Frames Action

(Krita 5.0 Animation Refactor)

Some of the client side code needed to be rewritten to account
for selected "frame" indices that do not contain frames. This
was missed because contiguous frame placement would not cause
this assert to fire.

BUG:427460